# Quarter-4-learning

./: README.md
.devcontainer/: devcontainer.json
3-Pydantic/: README.md
4-parameter-validation-api/: README.md  main.py  pyproject.toml
Hello-fast-API/: README.md
Hello-fast-API/fastdca-p1/: main.py
OpenAI_SDK_Agents/10_streaming/: main.py  pyproject.toml
OpenAI_SDK_Agents/11_Advanced_Handoffs/: handoff_test.py  main.py  pyproject.toml
OpenAI_SDK_Agents/12_custom_runner/: main.py  pyproject.toml
OpenAI_SDK_Agents/1_hello_world/: main.py  pyproject.toml
OpenAI_SDK_Agents/2_handoffs/: handoff.py  pyproject.toml
OpenAI_SDK_Agents/3_output_types/: main.py  pyproject.toml
OpenAI_SDK_Agents/4_dynamic_instructions/: main.py  pyproject.toml
OpenAI_SDK_Agents/5_API_Handling/: chatCompletions.py  pyproject.toml  responses.py
OpenAI_SDK_Agents/6_model_configurations/: AgentLevel.py  GlobalLevel.py  RunLevel.py  pyproject.toml
OpenAI_SDK_Agents/7_tools/1-agents-with-tools/: ComplexExample.py  SimpleExample.py  pyproject.toml
OpenAI_SDK_Agents/9_llm_or_agent_context/: main.py  pyproject.toml
Sir-Aneeq-tasks/task3/health_agent_SDK/: hooks.py  (+6 more)
What-is-generative-AI/: GENERATIVE-AI.md
chainlit/agent/: chainlit.md  chainlit.toml  main.py  pyproject.toml
quaid_agent/: README.md  agent.py  pyproject.toml
streamlit_agents/file_handler_agent/: main.py  pyproject.toml
streamlit_agents/health_agent_SDK/: README.md  config.py  context.py  guardrails.py
streamlit_agents/health_wellness_agent/: README.md  agent.py  main.py  pyproject.toml  requirements.txt
(+32 files in other folders)
